# sharedLibsDemo

./: CMakeLists.txt  README.md  test.sh
allFilesOneFolder/: main  shared.h
dockerCpp/: Dockerfile_cpp  docker-compose.yml  entrypoint.sh
include/: shared.h
original/: main.cpp
src/main/: main.cpp
src/shared/: shared.cpp
src/testCMake/: testCMake.cpp
